<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>dev.jshfx</groupId>
	<artifactId>dev.jshfx.parent</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<modules>
		<module>dev.jshfx.base</module>
		<module>dev.jshfx.fonts</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<ojfxVersion>17.0.0.1</ojfxVersion>
		<picocliVersion>4.6.1</picocliVersion>
		<javafx.platform>win</javafx.platform>
		<scriptExtension>bat</scriptExtension>
		<pathSeparator>;</pathSeparator>
		<osHomeDir>"%HOME%"</osHomeDir>
		<distFormat>zip</distFormat>
		<sourceJdkModules>${java.home}</sourceJdkModules>
		<sysName>jshfx</sysName>
		<distName>${sysName}-${project.version}</distName>
		<homeDir>.${sysName}/${project.version}</homeDir>
		<logDir>log</logDir>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>dev.jshfx</groupId>
				<artifactId>dev.jshfx.fonts</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-base</artifactId>
				<version>${ojfxVersion}</version>
				<classifier>${javafx.platform}</classifier>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-controls</artifactId>
				<version>${ojfxVersion}</version>
				<classifier>${javafx.platform}</classifier>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-graphics</artifactId>
				<version>${ojfxVersion}</version>
				<classifier>${javafx.platform}</classifier>
			</dependency>
			<dependency>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-web</artifactId>
				<version>${ojfxVersion}</version>
				<classifier>${javafx.platform}</classifier>
			</dependency>
			<dependency>
				<groupId>org.controlsfx</groupId>
				<artifactId>controlsfx</artifactId>
				<version>12.0.0-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>org.fxmisc.richtext</groupId>
				<artifactId>richtextfx</artifactId>
				<version>1.0.0-SNAPSHOT</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse</groupId>
				<artifactId>yasson</artifactId>
				<version>2.0.0-M2</version>
			</dependency>
			<dependency>
				<groupId>com.github.javaparser</groupId>
				<artifactId>javaparser-symbol-solver-core</artifactId>
				<version>3.23.0</version>
			</dependency>
			<dependency>
				<groupId>info.picocli</groupId>
				<artifactId>picocli</artifactId>
				<version>${picocliVersion}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.1</version>
					<configuration>
						<release>17</release>
						<compilerArgs>
							<compilerArg>--enable-preview</compilerArg>
						</compilerArgs>
						<annotationProcessorPaths>
							<path>
								<groupId>info.picocli</groupId>
								<artifactId>picocli-codegen</artifactId>
								<version>${picocliVersion}</version>
							</path>
						</annotationProcessorPaths>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.2.0</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>templating-maven-plugin</artifactId>
					<version>1.0.0</version>
					<executions>
						<execution>
							<id>filter-src</id>
							<goals>
								<goal>filter-sources</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<repositories>
		<repository>
			<id>sonatype.snapshots</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

</project>